Modificar app.module.ts - agregar modulos necesarios - agregar routing

--- a/frontend/cursos-front/src/app/acciones-disponibles-componente/acciones-disponibles-componente.component.html
+++ b/frontend/cursos-front/src/app/acciones-disponibles-componente/acciones-disponibles-componente.component.html
@@ -1,1 +1,12 @@
-<p>acciones-disponibles-componente works!</p>
+<div class='acciones'>
+    <h2 id='acciones-disponibles'>Acciones Disponibles</h2>
+    <ul>
+      <li><a class='link' [routerLink]="['alumnos/']"><p>Ver Listado De Alumnos</p></a>
+      <li><a class='link' [routerLink]="['cursos/']"><p>Ver Cursos Disponibles</p></a>
+      <li><a class='link' [routerLink]="['agregar-alumno/']"><p>Agregar Alumno</p></a>
+      <li><a class='link' [routerLink]="['agregar-curso/']"><p>Agregar Curso</p></a>
+      <li><a class='link' [routerLink]="['suscribir/']"><p>Suscribir Alumno</p></a>
+      <li><a class='link' [routerLink]="['desuscribir/']"><p>Desuscribir Alumno</p></a>
+      <li><a class='link' [routerLink]="['calificar/']"><p>Calificar Alumno</p></a>
+    </ul>
+  </div>
