Modificar cursos-lista-componente

--- a/frontend/cursos-front/src/app/cursos-lista-componente/cursos-lista-componente.component.html
+++ b/frontend/cursos-front/src/app/cursos-lista-componente/cursos-lista-componente.component.html
@@ -1,1 +1,11 @@
-<p>cursos-lista-componente works!</p>
+<div class='cursos-lista' >
+    <h2>Cursos Disponibles</h2>
+    <ul>
+        <div  div *ngFor='let curso of cursos'>
+            <li><a [title]="curso.nombre + ' details'" [routerLink]="['/cursos', curso.id]">
+            {{ curso.nombre }}
+            </a><span><button (click)='borrarCurso(curso.id)' class='eliminar'>X</button></span></li>
+        </div>
+    </ul>
+  </div>
+  
