--- a/frontend/cursos-front/src/app/desuscripcion-componente/desuscripcion-componente.component.html
+++ b/frontend/cursos-front/src/app/desuscripcion-componente/desuscripcion-componente.component.html
@@ -1,6 +1,6 @@
 <div class=''>
     <form  [formGroup]="desuscribirAlumnoForm" (ngSubmit)="desuscribirAlumno(desuscribirAlumnoForm.value)">
-    <h2>Suscribir Alumno</h2>
+    <h2>Desuscribir Alumno</h2>
         <div>
           <select class="custom-select" formControlName="alumno">
             <option value="" disabled>Alumno</option>
